# QT-app

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  QT-app_manual_tests.xlsx  README.md  annotated.html  annotated_dup.js  authmanager_8h_source.html  classAuthManager-members.html  classAuthManager.html  classClient-members.html  classClient.html  classClientDestroyer-members.html  classClientDestroyer.html  classClientTest-members.html  classClientTest.html  classDBManager-members.html  classDBManager.html  classIServerFunc-members.html  classIServerFunc.html  classLoginWindow-members.html  classLoginWindow.html  classMainWindow-members.html  classMainWindow.html  classMyTcpServer-members.html  classMyTcpServer.html  classRegWindow-members.html  classRegWindow.html  classServerFunctionsManager-members.html  classServerFunctionsManager.html  classServerFunctionsTest-members.html  classServerFunctionsTest.html  classTaskDialog-members.html  classTaskDialog.html  classUi_1_1LoginWindow.html  classUi_1_1MainWindow-members.html  classUi_1_1MainWindow.html  classUi_1_1RegWindow-members.html  classUi_1_1RegWindow.html  (+72 more)
.github/workflows/: docs.yml  main.yml
client/: .gitignore  CMakeLists.txt  client.cpp  client.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  regwindow.cpp  regwindow.h  regwindow.ui
client/tests/: tst_client.cpp
db/: docker-compose.yaml
db/migrations/: dump-doomb-202604012031.sql  dump-release-doomb-202604262223.sql
docs/html/: annotated.html  annotated_dup.js  authmanager_8h_source.html  classClient-members.html  classClient.html  classClient.js  classClientDestroyer-members.html  classClientDestroyer.html  classClientTest-members.html  classClientTest.html  classDBManager-members.html  classDBManager.html  classDBManager.js  classIServerFunc-members.html  classIServerFunc.html  classIServerFunc.js  classLoginWindow-members.html  classLoginWindow.html  classMainWindow-members.html  classMainWindow.html  classMyTcpServer-members.html  classMyTcpServer.html  classMyTcpServer.js  classRegWindow-members.html  classRegWindow.html  classServerFunctionsManager-members.html  classServerFunctionsManager.html  classServerFunctionsTest-members.html  classServerFunctionsTest.html  classTaskDialog-members.html  classTaskDialog.html  classUi_1_1LoginWindow-members.html  classUi__MainWindow-members.html  classUi__RegWindow.html  class_auth_manager-members.html  class_auth_manager.html  class_client.html  class_client_destroyer-members.html  class_client_destroyer.html  class_client_test-members.html  (+76 more)
docs/html/search/: all_0.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js
search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  classes_0.js  classes_7.js  classes_a.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  searchdata.js
server/: API_OVERVIEW.md  CMakeLists.txt  authmanager.cpp  authmanager.h  dbmanager.cpp  dbmanager.h  main.cpp  mytcpserver.cpp  mytcpserver.h  serverfunc.h  serverfunctions.cpp  serverfunctions.h  serverfunctionsmanager.cpp  serverfunctionsmanager.h
server/tests/: tst_server.cpp
